something works, something doesn't

--- a/santa_unchained/templates/base.html
+++ b/santa_unchained/templates/base.html
@@ -29,7 +29,7 @@
           {% comment %}
           Fill in url to create wishlist.
           {% endcomment %}
-          <a href=""
+          <a href="{% url 'wishes:wishlist' %}"
              class="button primary radius-100">{% trans "Create letter" %}</a>
         </div>
       </nav>
